updated all css selectors to camelCase

--- a/src/components/topbar/topbar.css
+++ b/src/components/topbar/topbar.css
@@ -10,33 +10,33 @@
   z-index: 999;
 }
 
-.top .top-left,
-.top .top-right {
+.topLeft,
+.topRight {
   flex: 3;
   display: flex;
   align-items: center;
   justify-content: center;
 }
 
-.top .top-center {
+.topCenter {
   flex: 6;
 }
 
-.top .top-icon {
+.topIcon {
   font-size: 20px;
   margin-right: 10px;
   color: #666;
   cursor: pointer;
 }
 
-.top .top-image {
+.topImage {
   height: 40px;
   width: 40px;
   border-radius: 50%;
   object-fit: cover;
 }
 
-.top .top-list {
+.topList {
   display: flex;
   justify-content: center;
   margin: 0;
@@ -44,14 +44,14 @@
   list-style: none;
 }
 
-.top .top-list-item {
+.topListItem {
   margin-right: 20px;
   font-size: 18px;
   font-weight: 300;
   cursor: pointer;
 }
 
-.top .top-search-icon {
+.topSearchIcon {
   font-size: 18px;
   color: #666;
   cursor: pointer;
