--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -2,7 +2,7 @@
   margin-top: 60px;
 }
 
-.header-titles {
+.headerTitles {
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -10,13 +10,13 @@
   color: #444;
 }
 
-.header-title-sm {
+.headerTitleSm {
   position: absolute;
   top: 18%;
   font-size: 20px;
 }
 
-.header-title-lg {
+.headerTitleLg {
   position: absolute;
   top: 20%;
   font-size: 100px;
