--- a/src/components/post/post.css
+++ b/src/components/post/post.css
@@ -3,20 +3,20 @@
   margin: 0px 25px 40px 25px;
 }
 
-.post-img {
+.postImg {
   width: 100%;
   height: 280px;
   object-fit: cover;
   border-radius: 7px;
 }
 
-.post-info {
+.postInfo {
   display: flex;
   flex-direction: column;
   align-items: center;
 }
 
-.post-cat {
+.postCat {
   font-family: "Varela", sans-serif;
   font-size: 11px;
   color: #be9656;
@@ -26,7 +26,7 @@
   cursor: pointer;
 }
 
-.post-title {
+.postTitle {
   font-family: "Josefin Sans", sans-serif;
   font-size: 24px;
   font-weight: 700;
@@ -34,7 +34,7 @@
   cursor: pointer;
 }
 
-.post-date {
+.postDate {
   font-family: "Lora", serif;
   font-style: italic;
   font-size: 13px;
@@ -42,7 +42,7 @@
   margin-top: 15px;
 }
 
-.post-desc {
+.postDesc {
   font-family: "Valera Round", sans-serif;
   font-size: 14px;
   color: #444;
