--- a/src/components/sidebar/sidebar.css
+++ b/src/components/sidebar/sidebar.css
@@ -9,13 +9,13 @@
   align-items: center;
 }
 
-.sidebar-item {
+.sidebarItem {
   display: flex;
   flex-direction: column;
   align-items: center;
 }
 
-.sidebar-title {
+.sidebarTitle {
   margin: 10px;
   padding: 5px;
   width: 80%;
@@ -29,28 +29,28 @@
   text-align: center;
 }
 
-.sidebar-item > img {
+.sidebarItem > img {
   margin-top: 15px;
   max-height: 250px;
 }
 
-.sidebar-item > p {
+.sidebarItem > p {
   padding: 30px;
 }
 
-.sidebar-list {
+.sidebarList {
   list-style: none;
   margin-bottom: 30px;
 }
 
-.sidebar-list-item {
+.sidebarListItem {
   display: inline-block;
   width: 50%;
   margin-top: 15px;
   cursor: pointer;
 }
 
-.sidebar-social {
+.sidebarSocial {
   margin-top: 15px;
   width: 250px;
   display: flex;
@@ -58,7 +58,7 @@
   justify-content: center;
 }
 
-.sidebar-icon {
+.sidebarIcon {
   font-size: 16px;
   margin-left: 15px;
   cursor: pointer;
