--- a/src/components/singlePost/singlePost.css
+++ b/src/components/singlePost/singlePost.css
@@ -1,45 +1,45 @@
-.single-post {
+.singlePost {
   flex: 9;
 }
 
-.single-post-wrapper {
+.singlePostWrapper {
   padding: 20px;
   padding-right: 0;
 }
 
-.single-post-img {
+.singlePostImg {
   width: 100%;
   height: 300px;
   border-radius: 5px;
   object-fit: cover;
 }
 
-.single-post-title {
+.singlePostTitle {
   text-align: center;
   margin: 10px;
   font-family: "Lora", serif;
   font-size: 20px;
 }
 
-.single-post-edit {
+.singlePostEdit {
   float: right;
   font-size: 16px;
 }
 
-.single-post-icon {
+.singlePostIcon {
   margin-left: 10px;
   cursor: pointer;
 }
 
-.single-post-icon:first-child {
+.singlePostIcon:first-child {
   color: teal;
 }
 
-.single-post-icon:last-child {
+.singlePostIcon:last-child {
   color: tomato;
 }
 
-.single-post-info {
+.singlePostInfo {
   margin-bottom: 20px;
   display: flex;
   justify-content: space-between;
@@ -48,13 +48,13 @@
   font-family: "Varela Round", sans-serif;
 }
 
-.single-post-desc {
+.singlePostDesc {
   color: #666;
   font-size: 18px;
   line-height: 25px;
 }
 
-.single-post-desc::first-letter {
+.singlePostDesc::first-letter {
   margin-left: 20px;
   font-size: 30px;
   font-weight: 600;
